Add highlight prop to API components (#28)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "baseUrl": ".",
+        "downlevelIteration": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "jsx": "react",
         "lib": ["es2015", "es2017.object", "dom"],
         "module": "commonjs",
-        "jsx": "react",
-        "baseUrl": ".",
-        "resolveJsonModule": true,
         "outDir": "build",
-        "downlevelIteration": true,
+        "resolveJsonModule": true,
         "strict": true,
-        "forceConsistentCasingInFileNames": true
+        "target": "es5"
     },
     "exclude": ["node_modules/**/*", "build/**/*"]
 }
