--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.1.6",
     "@microsoft/api-extractor-model": "^7.1.1",
     "@microsoft/tsdoc": "^0.12.9",
     "@types/chalk": "^2.2.0",
@@ -22,6 +21,7 @@
     "framer": "^1.0.8",
     "framer-motion": "^0.18.6",
     "jest": "^24.3.1",
+    "lodash.escape": "^4.0.1",
     "monobase": "^3.2.2",
     "prettier": "^1.16.4",
     "prismjs": "^1.15.0",
