--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ jobs:
           name: verify-api-references
           command: |
             make verify-api-references
+      - run:
+          name: verify-code-examples
+          command: |
+            find ~/repo/build -name '*.html' | xargs yarn ts-node ./test/stylecheck.ts
       - store_artifacts:
           path: ~/repo/build
 workflows:
