--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "@microsoft/api-extractor-model": "^7.1.1",
-    "@microsoft/tsdoc": "^0.12.9",
+    "@microsoft/api-extractor-model": "^7.3.0",
+    "@microsoft/tsdoc": "0.12.10",
     "@types/chalk": "^2.2.0",
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.7",
@@ -19,7 +19,7 @@
     "chokidar-cli": "^1.2.1",
     "classnames": "^2.2.6",
     "framer": "^1.0.15",
-    "framer-motion": "^1.2.6",
+    "framer-motion": "^1.4.0",
     "jest": "^24.3.1",
     "lodash.escape": "^4.0.1",
     "monobase": "^3.3.1",
