Differentiate Library and Motion (#61)
* Add variables for the accent color
* Add dynamic accent colors to “API” and “404”
* Add animation to “404”
* Add a “404” for Motion as well
* Fix “404” redirect
* Update API switch
* Hide Edit

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,12 @@
   from = "/"
   to = "/api/"
 
+# Custom Motion 404 (Netlify defaults to 404.html in project root)
+[[redirects]]
+  from = "/motion/*"
+  to = "/api/motion/404/"
+  status = 404
+
 # Custom 404 (Netlify defaults to 404.html in project root)
 [[redirects]]
   from = "/*"
