Update Api docs for library 1.2.1 (#105)
* Update library for 1.2.1

* Hack around issues with api-extractor@7.7.8

Co-authored-by: Niels van Hoorn <niels@framer.com>

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cheerio": "^1.0.0-rc.2",
     "chokidar-cli": "^2.0.0",
     "classnames": "^2.2.6",
-    "framer": "^1.1.7",
-    "framer-motion": "1.11.0",
+    "framer": "^1.2.1",
+    "framer-motion": "^1.11.0",
     "jest": "^24.3.1",
     "lodash.escape": "^4.0.1",
     "monobase": "^3.3.1",
