--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "@framer/api-docs",
-  "version": "1.0.0",
-  "private": true,
-  "devDependencies": {
-    "@microsoft/api-extractor-model": "7.3.0",
-    "@microsoft/tsdoc": "0.12.10",
-    "@types/chalk": "^2.2.0",
-    "@types/cheerio": "^0.22.11",
-    "@types/classnames": "^2.2.7",
-    "@types/jest": "^24.0.11",
-    "@types/lodash.escape": "^4.0.5",
-    "@types/prismjs": "^1.9.1",
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-test-renderer": "^16.8.1",
-    "chalk": "^2.4.2",
-    "cheerio": "^1.0.0-rc.2",
-    "chokidar-cli": "^2.0.0",
-    "classnames": "^2.2.6",
-    "framer": "^1.2.8",
-    "framer-motion": "^2.9.0",
-    "jest": "^24.3.1",
-    "lodash.escape": "^4.0.1",
-    "monobase": "^3.3.1",
-    "prettier": "^1.16.4",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-test-renderer": "^16.8.4",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.2"
-  }
+    "name": "@framer/api-docs",
+    "version": "1.0.0",
+    "private": true,
+    "devDependencies": {
+        "@microsoft/api-extractor-model": "7.3.0",
+        "@microsoft/tsdoc": "0.12.10",
+        "@types/chalk": "^2.2.0",
+        "@types/cheerio": "^0.22.11",
+        "@types/classnames": "^2.2.7",
+        "@types/jest": "^24.0.11",
+        "@types/lodash.escape": "^4.0.5",
+        "@types/prismjs": "^1.9.1",
+        "@types/react": "^16.8.2",
+        "@types/react-dom": "^16.8.0",
+        "@types/react-test-renderer": "^16.8.1",
+        "chalk": "^2.4.2",
+        "cheerio": "^1.0.0-rc.2",
+        "chokidar-cli": "^2.0.0",
+        "classnames": "^2.2.6",
+        "framer": "^1.2.8",
+        "framer-motion": "2.9.0",
+        "jest": "^24.3.1",
+        "lodash.escape": "^4.0.1",
+        "monobase": "^3.3.1",
+        "prettier": "^1.16.4",
+        "prismjs": "^1.15.0",
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1",
+        "react-test-renderer": "^16.8.4",
+        "ts-jest": "^24.0.0",
+        "ts-node": "^8.0.2"
+    }
 }
