--- a/package.json
+++ b/package.json
@@ -2,27 +2,40 @@
     "name": "@framer/api-docs",
     "version": "1.0.0",
     "private": true,
+    "scripts": {
+        "postinstall": "patch-package"
+    },
     "devDependencies": {
         "@microsoft/api-extractor-model": "7.3.0",
         "@microsoft/tsdoc": "0.12.10",
         "@types/chalk": "^2.2.0",
         "@types/cheerio": "^0.22.11",
         "@types/classnames": "^2.2.7",
+        "@types/glob": "^7.1.3",
         "@types/jest": "^24.0.11",
+        "@types/lodash.debounce": "^4.0.6",
         "@types/lodash.escape": "^4.0.5",
+        "@types/lodash.groupby": "^4.6.6",
+        "@types/lodash.isplainobject": "^4.0.6",
         "@types/prismjs": "^1.9.1",
         "@types/react": "^16.8.2",
         "@types/react-dom": "^16.8.0",
         "@types/react-test-renderer": "^16.8.1",
+        "@types/styled-components": "^5.1.7",
         "chalk": "^2.4.2",
         "cheerio": "^1.0.0-rc.2",
         "chokidar-cli": "^2.0.0",
         "classnames": "^2.2.6",
+        "dotenv-cli": "^4.0.0",
         "framer": "^1.2.8",
         "framer-motion": "3.0.0",
+        "glob": "^7.1.6",
         "jest": "^24.3.1",
         "lodash.escape": "^4.0.1",
         "monobase": "^3.3.1",
+        "patch-package": "^6.2.2",
+        "playwright": "^1.7.1",
+        "postinstall-postinstall": "^2.1.0",
         "prettier": "^1.16.4",
         "prismjs": "^1.15.0",
         "react": "^16.8.1",
@@ -30,5 +43,12 @@
         "react-test-renderer": "^16.8.4",
         "ts-jest": "^24.0.0",
         "ts-node": "^8.0.2"
+    },
+    "dependencies": {
+        "algoliasearch": "^4.8.3",
+        "lodash.debounce": "^4.0.8",
+        "lodash.groupby": "^4.6.0",
+        "lodash.isplainobject": "^4.0.6",
+        "styled-components": "^5.2.1"
     }
 }
