Update docs for object controls (#144)
* Updates all property controls to read from library

* Upgrade framer library

* Upgrade api-extractor-model and tsdoc to same versions as used in Library

* Bump framer library

Co-authored-by: Addison <addison@framer.com>

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "postinstall": "patch-package"
     },
     "devDependencies": {
-        "@microsoft/api-extractor-model": "7.3.0",
-        "@microsoft/tsdoc": "0.12.10",
+        "@microsoft/api-extractor-model": "7.7.7",
+        "@microsoft/tsdoc": "0.12.14",
         "@types/chalk": "^2.2.0",
         "@types/cheerio": "^0.22.11",
         "@types/classnames": "^2.2.7",
@@ -27,8 +27,8 @@
         "chokidar-cli": "^2.0.0",
         "classnames": "^2.2.6",
         "dotenv-cli": "^4.0.0",
-        "framer": "^1.2.8",
-        "framer-motion": "3.0.0",
+        "framer": "^1.2.22",
+        "framer-motion": "^3.3.0",
         "glob": "^7.1.6",
         "jest": "^24.3.1",
         "lodash.escape": "^4.0.1",
