--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "lodash.escape": "^4.0.1",
         "monobase": "^3.3.1",
         "patch-package": "^6.2.2",
-        "playwright": "^1.7.1",
+        "playwright-chromium": "^1.10.0",
         "postinstall-postinstall": "^2.1.0",
         "prettier": "^1.16.4",
         "prismjs": "^1.23.0",
