--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,8 @@
             },
             "continue": true
         },
-        { "src": "/", "status": 308, "headers": { "Location": "/api/" } },
-        { "src": "/(.*)", "status": 404, "dest": "/api/404.html" },
-        { "src": "/motion/(.*)", "status": 404, "dest": "/api/motion/404.html" }
+        { "src": "/", "status": 308, "headers": { "Location": "/legacy/docs/" } },
+        { "src": "/(.*)", "status": 404, "dest": "/legacy/docs/404.html" },
+        { "src": "/motion/(.*)", "status": 404, "dest": "/legacy/docs/motion/404.html" }
     ]
 }
